k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-colleague
  namespace: ai-colleague
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ai-colleague
  template:
    metadata:
      labels:
        app: ai-colleague
    spec:
      containers:
        - image: ghcr.io/nvaa-se/ai-colleague:1.0.1 # {"$imagepolicy": "flux-system:cloaca"}
          resources: {}
          name: ai-colleague
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
