k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ai-colleague
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: ai-colleague
